# aether-

./: README.md  build.bat  dev.bat  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  lib.rs  main.rs
src/css/: style.css
src/js/: api.js  cache.js  core.js  icons.js  main.js  player.js  storage.js  ui.js
